--- a/netHCSR04.ipynb
+++ b/netHCSR04.ipynb
@@ -6,7 +6,7 @@
       "name": "netHCSR04.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOS5j5MvbLgQ96uUnZ2QrK6",
+      "authorship_tag": "ABX9TyMqydjyjJJxtCw0K5FIY6pw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "id": "xEjg1EkkxCTe"
       },
       "source": [
-        "Vamos instlar o tensorflow 2.0 e a verramenta para converção do modelo que iremos gerar em código C, que será embarcado no ESP32."
+        "Vamos instlar o tensorflow 2.0 e a ferramenta para converção do modelo que iremos gerar em código C++, a ser embarcado no ESP32."
       ]
     },
     {
@@ -82,7 +82,7 @@
         "id": "qrEzOdi-ux0m"
       },
       "source": [
-        "Agora devemos fazer o upload do arquivo contendo as informações de distância com relação a saída do sensor."
+        "Agora devemos fazer o upload do arquivo contendo as informações de distância e tempo de respota do sensor."
       ]
     },
     {
